<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/space_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_related" android:text="@string/explore"
            android:textAppearance="?attr/textAppearanceTitleLarge" android:accessibilityHeading="true" />
        <com.google.android.material.button.MaterialButton android:id="@+id/explore_my_trails"
            style="@style/Widget.TrailRelay.ExploreRow" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/my_trails" app:icon="@drawable/ic_trails" />
        <com.google.android.material.button.MaterialButton android:id="@+id/explore_community"
            style="@style/Widget.TrailRelay.ExploreRow" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/community" app:icon="@drawable/ic_community" />
        <com.google.android.material.button.MaterialButton android:id="@+id/explore_offline"
            style="@style/Widget.TrailRelay.ExploreRow" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/offline_library" app:icon="@drawable/ic_status_download" />
        <com.google.android.material.button.MaterialButton android:id="@+id/explore_import"
            style="@style/Widget.TrailRelay.ExploreRow" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/import_gpx" app:icon="@drawable/ic_import" />
        <com.google.android.material.button.MaterialButton android:id="@+id/explore_settings"
            style="@style/Widget.TrailRelay.ExploreRow" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/settings" app:icon="@drawable/ic_settings" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
