<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:clipToPadding="false">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/space_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/filters" android:textAppearance="?attr/textAppearanceTitleLarge"
            android:accessibilityHeading="true" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TrailRelay.FilterField"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content" android:hint="@string/state_filter">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/state_filter" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:minHeight="@dimen/touch_target"
                android:inputType="none" android:contentDescription="@string/state_filter" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TrailRelay.FilterField"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content" android:hint="@string/difficulty_filter">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/difficulty_filter" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:minHeight="@dimen/touch_target"
                android:inputType="none" android:contentDescription="@string/difficulty_filter" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.TrailRelay.FilterField"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content" android:hint="@string/vehicle_filter">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/vehicle_filter" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:minHeight="@dimen/touch_target"
                android:inputType="none" android:contentDescription="@string/vehicle_filter" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton android:id="@+id/filters_apply"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_content" android:text="@string/apply_filters" />
        <com.google.android.material.button.MaterialButton android:id="@+id/filters_clear"
            style="@style/Widget.TrailRelay.TextButton"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/clear_filters" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
